--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,1 +1,24 @@
-<p>about works!</p>
+<section class="about-container">
+  <img src="about_banner.png" alt="About page banner image" />
+  <div class="container">
+    <div class="content">
+      <h2>Don’t squeeze in a sedan when you could relax in a van.</h2>
+      <p>
+        Our mission is to enliven your road trip with the perfect travel van
+        rental. Our vans are recertified before each trip to ensure your travel
+        plans can go off without a hitch. (Hitch costs extra 😉)
+      </p>
+      <p>
+        Our team is full of vanlife enthusiasts who know firsthand the magic of
+        touring the world on 4 wheels.
+      </p>
+    </div>
+    <section class="cta-section">
+      <div>
+        <h3>Your destination is waiting.</h3>
+        <h3>Your van is ready.</h3>
+      </div>
+      <app-button> Explore our vans </app-button>
+    </section>
+  </div>
+</section>
